@@ -6,6 +6,8 @@ Changelog for pymta
 - Dropped dependency to repoze.workflow because the module added a lot of 
   dependencies recently (six others in total). The new, custom state machine
   also supports flags and conditions which suits SMTP very much.
+- Added dependency to pycerberus (>= 0.3) to validate all sent parameters
+  thoroughly with sensible error messages.
 - relaxed restrictions for the HELO/EHLO parameter (as real world clients don't
   send real host names)
 - Fixed bug - ESMTP session switched back to plain SMTP after the first mail 
